--- a/system/index.html
+++ b/system/index.html
@@ -81,15 +81,21 @@
 
             <div class="video-container ">
                 <div class="videos video1 ">
-                    <video src="brand.mov" autoplay muted loop></video>
+                    <img src="clim2.png" alt="Image 2" class="img2" />
 
-                    <video src="202412151835 (1).mp4" autoplay muted loop></video>
+                    <img src="Screenshot 2025-06-04 at 15.12.48.png" alt="Image 2" class="img2" />
+                    <img src="cod2.png" alt="Image 2" class="img2" />
+                    <img src="Screenshot 2025-06-04 at 15.00.40.png" alt="Image 2" class="img2" />
+                    <img src="clim2.png" alt="Image 2" class="img2" />
+                    <!-- <video src="brand.mov" autoplay muted loop></video>
+
+                    <video src="clim1.mp4" autoplay muted loop></video>
 
                     <video src="bylux.mov" autoplay muted loop></video>
 
                     <video src="codixel.mov" autoplay muted loop></video>
 
-                    <video src="brand.mov" autoplay muted loop></video>
+                    <video src="brand.mov" autoplay muted loop></video> -->
 
 
 
